--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="container">
         <h1>Trivia Game!</h1>
 
-        <div class="time-remaining">
-            Time Remaining:
+        <div class="time">
+            
         </div>
     </div>
     <br>
