--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Trivia Game!</h1>
 
         <div class="time">
-            
+            Time Remaining:
         </div>
     </div>
     <br>
