--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
         <div class="time">
             Time Remaining:
         </div>
-    </div>
+   
     <br>
+    
+        <div class="timer"></div>
+    <button id="start">Start Timer</button>
+    <br>
+    <br>
+
+
     <div class="question-one">
         <p>Q. How is Robert Zimmerman better known?</p>
         <button class="button-true">Bob Dylan</button>
