--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <button id="button-false">The Smashing Pumpkins</button>
     </div>
     <div class="question-three">
-        <p>Q. What was Elvis Presley's first hit in 1956??</p>
+        <p>Q. What was Elvis Presley's first hit in 1956?</p>
         <button id="button-false">Little Sister</button>
         <button id="button-true">Heartbreak Hotel</button>
         <button id="button-false">Jailhouse Rock</button>
     </div>
 
     <div class="question-four">
-        <p>Q. Guitarist George Harrison was a member of which influential rock group??</p>
+        <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
         <button id="button-true">The Beatles</button>
         <button id="button-false">The Rolling Stones</button>
         <button id="button-false">Led Zeppelin</button>
