--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 
     <div class="question-two">
         <p>Q. Michael Stipe is the lead singer of which rock group?</p>
-        <button id="button-false">Nirvana</button>
-        <button id="button-true">R.E.M.</button>
-        <button id="button-false">The Smashing Pumpkins</button>
+        <button type="button" id="button-false">Nirvana</button>
+        <button type="button" id="button-true">R.E.M.</button>
+        <button type="button" id="button-false">The Smashing Pumpkins</button>
     </div>
     <div class="question-three">
         <p>Q. What was Elvis Presley's first hit in 1956?</p>
-        <button id="button-false">Little Sister</button>
-        <button id="button-true">Heartbreak Hotel</button>
-        <button id="button-false">Jailhouse Rock</button>
+        <button type="button" id="button-false">Little Sister</button>
+        <button type="button" id="button-true">Heartbreak Hotel</button>
+        <button type="button" id="button-false">Jailhouse Rock</button>
     </div>
 
     <div class="question-four">
