--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <div class="question-four">
         <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
-        <button id="button-true">The Beatles</button>
-        <button id="button-false">The Rolling Stones</button>
-        <button id="button-false">Led Zeppelin</button>
+        <button type="button" id="button-true">The Beatles</button>
+        <button type="button" id="button-false">The Rolling Stones</button>
+        <button type="button" id="button-false">Led Zeppelin</button>
     </div>
 
     </div>
