--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <div class="question-one">
         <p>Q. How is Robert Zimmerman better known?</p>
-        <button class="button-true">Bob Dylan</button>
-        <button class="button-false">Robert Plant</button>
-        <button class="button-false">Paul McCartney</button>
+        <button type="button" id="button-true">Bob Dylan</button>
+        <button type="button" id="button-false">Robert Plant</button>
+        <button type="button" id="button-false">Paul McCartney</button>
 
     </div>
 
