--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button type="button" id="button-false">Jailhouse Rock</button>
     </div>
 
-    <div class="question-four">
+    <div class="questions">
         <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
         <button type="button" id="button-true">The Beatles</button>
         <button type="button" id="button-false">The Rolling Stones</button>
