--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <button type="button" id="button-false">The Rolling Stones</button>
         <button type="button" id="button-false">Led Zeppelin</button>
     </div>
-
+<div class="wins">Wins:</div>
+<div class="losses">Losses:</div>
     </div>
 
 
