--- a/index.html
+++ b/index.html
@@ -39,30 +39,31 @@
 
     <div class="questions">
         <p>Q. How is Robert Zimmerman better known?</p>
-        <button type="button" id="button-true">Bob Dylan</button>
-        <button type="button" id="button-false">Robert Plant</button>
-        <button type="button" id="button-false">Paul McCartney</button>
+        <input type="radio" name="name" value="true">Bob Dylan</button>
+        <input type="radio" name="name" value="false">Robert Plant</button>
+        <input type="radio" name="name" value="false">Paul McCartney</button>
 
     </div>
-
+    <br>
     <div class="questions">
         <p>Q. Michael Stipe is the lead singer of which rock group?</p>
-        <button type="button" id="button-false">Nirvana</button>
-        <button type="button" id="button-true">R.E.M.</button>
-        <button type="button" id="button-false">The Smashing Pumpkins</button>
+        <input type="radio" name="name" value="false">Nirvana</input>
+        <input type="radio" name="name" value="true">R.E.M.</input>
+        <input type="radio" name="name" value="false">The Smashing Pumpkins</button>
     </div>
+    <br>
     <div class="questions">
         <p>Q. What was Elvis Presley's first hit in 1956?</p>
-        <button type="button" id="button-false">Little Sister</button>
-        <button type="button" id="button-true">Heartbreak Hotel</button>
-        <button type="button" id="button-false">Jailhouse Rock</button>
+        <input type="radio" name="name" value="false">Little Sister</button>
+        <input type="radio" name="name" value="true">Heartbreak Hotel</button>
+        <input type="radio" name="name" value="false">Jailhouse Rock</button>
     </div>
-
+<br>
     <div class="questions">
         <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
-        <button type="button" id="button-true">The Beatles</button>
-        <button type="button" id="button-false">The Rolling Stones</button>
-        <button type="button" id="button-false">Led Zeppelin</button>
+        <input type="radio" name="name" value="true">The Beatles</button>
+        <input type="radio" name="name" value="false">The Rolling Stones</button>
+        <input type="radio" name="name" value="false">Led Zeppelin</button>
     </div>
 <div class="wins">Wins:</div>
 <div class="losses">Losses:</div>
