--- a/index.html
+++ b/index.html
@@ -39,31 +39,30 @@
 
     <div class="questions">
         <p>Q. How is Robert Zimmerman better known?</p>
-        <input type="radio" name="name" value="true">Bob Dylan</button>
-        <input type="radio" name="name" value="false">Robert Plant</button>
-        <input type="radio" name="name" value="false">Paul McCartney</button>
+        <button type="button" id="bob-dylan">Bob Dylan</button>
+        <button type="button" id="robert-plant">Robert Plant</button>
+        <button type="button" id="paul-mccartney">Paul McCartney</button>
 
     </div>
-    <br>
+
     <div class="questions">
         <p>Q. Michael Stipe is the lead singer of which rock group?</p>
-        <input type="radio" name="name" value="false">Nirvana</input>
-        <input type="radio" name="name" value="true">R.E.M.</input>
-        <input type="radio" name="name" value="false">The Smashing Pumpkins</button>
+        <button type="button" id="nirvana">Nirvana</button>
+        <button type="button" id="rem">R.E.M.</button>
+        <button type="button" id="pumpkins">The Smashing Pumpkins</button>
     </div>
-    <br>
     <div class="questions">
         <p>Q. What was Elvis Presley's first hit in 1956?</p>
-        <input type="radio" name="name" value="false">Little Sister</button>
-        <input type="radio" name="name" value="true">Heartbreak Hotel</button>
-        <input type="radio" name="name" value="false">Jailhouse Rock</button>
+        <button type="button" id="little-sister">Little Sister</button>
+        <button type="button" id="heartbreak">Heartbreak Hotel</button>
+        <button type="button" id="jailhouse">Jailhouse Rock</button>
     </div>
-<br>
+
     <div class="questions">
         <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
-        <input type="radio" name="name" value="true">The Beatles</button>
-        <input type="radio" name="name" value="false">The Rolling Stones</button>
-        <input type="radio" name="name" value="false">Led Zeppelin</button>
+        <button type="button" id="beatles">The Beatles</button>
+        <button type="button" id="stones">The Rolling Stones</button>
+        <button type="button" id="zeppelin">Led Zeppelin</button>
     </div>
 <div class="wins">Wins:</div>
 <div class="losses">Losses:</div>
