--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
         <div class="questions">
-            <p>Q. How is Robert Zimmerman better known?</p>
+            <p>How is Robert Zimmerman better known?</p>
             <button type="button" id="bob-dylan">Bob Dylan</button>
             <button type="button" id="robert-plant">Robert Plant</button>
             <button type="button" id="paul-mccartney">Paul McCartney</button>
@@ -46,21 +46,21 @@
         </div>
         <br>
         <div class="questions">
-            <p>Q. Michael Stipe is the lead singer of which rock group?</p>
+            <p>Michael Stipe is the lead singer of which rock group?</p>
             <button type="button" id="nirvana">Nirvana</button>
             <button type="button" id="rem">R.E.M.</button>
             <button type="button" id="pumpkins">The Smashing Pumpkins</button>
         </div>
         <br>
         <div class="questions">
-            <p>Q. What was Elvis Presley's first hit in 1956?</p>
+            <p>What was Elvis Presley's first hit in 1956?</p>
             <button type="button" id="little-sister">Little Sister</button>
             <button type="button" id="heartbreak">Heartbreak Hotel</button>
             <button type="button" id="jailhouse">Jailhouse Rock</button>
         </div>
         <br>
         <div class="questions">
-            <p>Q. Guitarist George Harrison was a member of which influential rock group?</p>
+            <p>Guitarist George Harrison was a member of which influential rock group?</p>
             <button type="button" id="beatles">The Beatles</button>
             <button type="button" id="stones">The Rolling Stones</button>
             <button type="button" id="zeppelin">Led Zeppelin</button>
